--- a/SMS_Presentation/Views/ContaReceber/MontarTelaCR.cshtml
+++ b/SMS_Presentation/Views/ContaReceber/MontarTelaCR.cshtml
@@ -344,15 +344,13 @@
         }
     </script>
 
-    @*<script type="text/javascript">
+    <script type="text/javascript">
         $(document).ready(function () {
 
             $('.dataTables-example').DataTable({
                 pageLength: 25,
                 dom: '<"html5buttons"B>lTfgitp',
                 buttons: [
-                    { extend: 'copy' },
-                    { extend: 'csv' },
                     { extend: 'excel', title: 'ExampleFile' },
                     { extend: 'pdf', title: 'ExampleFile' },
 
@@ -375,7 +373,7 @@
 
         });
 
-    </script>*@
+    </script>
     <script type="text/javascript">
         $(function () {
             $("#cpf").mask("999.999.999-99");
