--- a/SMS_Presentation/Views/Venda/VerCancelados.cshtml
+++ b/SMS_Presentation/Views/Venda/VerCancelados.cshtml
@@ -1,7 +1,199 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.PEDIDO_VENDA
 @{
-    ViewBag.Title = "VerCancelados";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Pedidos de Venda</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarAdmin", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaPedidoVenda", "Venda")">Pedidos de Venda</a>
+            </li>
+            <li class="active">
+                <strong>Pedidos de Venda - Cancelados</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-primary pull-right">Hoje</span>
+                    <h5>Pedidos de Venda</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">@ViewBag.Canceladas</h1>
+                    <div class="stat-percent font-bold text-navy">32% <i class="fa fa-level-up"></i></div>
+                    <small>Cancelados</small>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Pedidos de Venda - Cancelados</h5>
+                </div>
+                <div class="ibox-content">
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.ButtonLinkIndex(text: "Voltar", action: "MontarTelaPedidoVenda", controller: "Venda")
+                        </div>
+                    </div>
+                    <div class="row">
+                            @if ((ViewBag.CanceladasLista as List<EntitiesServices.Model.PEDIDO_VENDA>).Count > 0)                                        {
+                                <table class="table table-striped table-bordered table-hover dataTables-example">
+                                    <thead>
+                                        <tr>
+                                            <th>Autor</th>   
+                                            <th>Nome</th>   
+                                            <th>Número</th>
+                                            <th>Data</th>   
+                                            <th>Previsão</th>   
+                                            <th>Status</th>   
+                                            <th class="td-one-action">Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var cond in (ViewBag.CanceladasLista as List<EntitiesServices.Model.PEDIDO_VENDA>))
+                                        {
+                                            <tr>
+                                                <td>@cond.USUARIO.USUA_NM_NOME</td>
+                                                <td>@cond.PEVE_NM_NOME</td>
+                                                <td>@cond.PEVE_NR_NUMERO</td>
+                                                <td>@cond.PEVE_DT_DATA.ToShortDateString()</td>
+                                                <td>@cond.PEVE_DT_PREVISTA.Value.ToShortDateString()</td>
+                                                @if (cond.PEVE_IN_STATUS == 1)
+                                                {
+                                                    <td><span class="badge badge-warning">Oportunidade Criada</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 2)
+                                                {
+                                                    <td><span class="badge badge-danger">Oportunidade Cancelada</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 3)
+                                                {
+                                                    <td><span class="badge badge-primary">Proposta Criada</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 4)
+                                                {
+                                                    <td><span class="badge badge-danger">Proposta Cancelada</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 5)
+                                                {
+                                                    <td><span class="badge badge-success">Pedido Criado</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 6)
+                                                {
+                                                    <td><span class="badge badge-danger">Pedido Cancelado</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 7)
+                                                {
+                                                    <td><span class="badge badge-success">Pedido em Aprovação</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 8)
+                                                {
+                                                    <td><span class="badge badge-danger">Pedido Não Aprovado</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 9)
+                                                {
+                                                    <td><span class="badge badge-success">Pedido Aprovado</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 10)
+                                                {
+                                                    <td><span class="badge badge-success">Pedido Processado</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 11)
+                                                {
+                                                    <td><span class="badge badge-warning">Faturamento</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 12)
+                                                {
+                                                    <td><span class="badge badge-success">Expedição</span></td>
+                                                }
+                                                else if (cond.PEVE_IN_STATUS == 13)
+                                                {
+                                                    <td><span class="badge badge-primary">Encerrado</span></td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                <td class="td-one-action">
+                                                    @Html.TableLinkDetails(cond.PEVE_CD_ID, "VerPedidoVenda","fa-search", "Ver")
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/plugins/sweetAlertStyles")
 }
 
-<h2>VerCancelados</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/sweetAlert")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.demo3').click(function () {
+                swal({
+                    title: "Confirma a duplicação do produto?",
+                    text: "A tela de edição deste produto será aberta logo após a confirmação",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Confirmar",
+                    cancelButtonText: "Cancelar",
+                   closeOnConfirm: false
+                }, function () {
+                    swal("Duplicado!", "Uma cópia deste produto foi criada", "success");
+                });
+            });
+        });
+    </script>
+
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
